--- a/build.gradle
+++ b/build.gradle
@@ -16,13 +16,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.liquibase:liquibase-core'
-    testImplementation 'org.projectlombok:lombok:1.18.22'
-	testImplementation 'org.projectlombok:lombok:1.18.22'
+	testImplementation 'org.projectlombok:lombok:1.18.26'
 
 	compileOnly 'org.projectlombok:lombok'
 
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+	runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
 	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
 
 	annotationProcessor 'org.projectlombok:lombok'
