--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	testImplementation 'org.projectlombok:lombok:1.18.26'
+	testImplementation 'org.mockito:mockito-inline:5.2.0'
 
 	compileOnly 'org.projectlombok:lombok'
 
