update properties - logging config

--- a/src/main/resources/EXAMPLE_application.properties
+++ b/src/main/resources/EXAMPLE_application.properties
@@ -1,4 +1,3 @@
-jwt.token.expiration=36000
 #database for authentication
 auth.datasource.jdbc-url=
 auth.datasource.username=
@@ -15,6 +14,23 @@ mag.cfg.warehouseid=
 mag.cfg.userid=
 mag.cfg.employeeid=
 mag.cfg.orderdoctypeid=
+#jpa
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show-sql=true
+#security
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
+jwt.token.expiration=36000
+#logging
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.suffix=.log
+server.tomcat.accesslog.prefix=access_log
+server.tomcat.accesslog.file-date-format=.yyyy-MM-dd
+server.tomcat.basedir=logs
+server.tomcat.accesslog.directory=accesslog
+logging.file.name=logs/spring.log
+logging.level.root=warn
+logging.level.org.springframework.web=debug
+logging.level.org.hibernate=error
